# BsdiffAndBspatch

./: .gitignore  README.md  gradle.properties  settings.gradle
app/: CMakeLists.txt  build.gradle
app/src/androidTest/java/com/nfl/bsdiffandbspatch/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/assets/: old.apk
app/src/main/cpp/: bspatch.c  native-lib.cpp  nflbspatch-lib.cpp
app/src/main/cpp/bzip2/: bzip2.c
app/src/main/java/com/nfl/bsdiffandbspatch/: JniTestActivity.java  MainActivity.java
app/src/main/java/com/nfl/bsdiffandbspatch/jni/: JniTestUtil.java
app/src/main/java/nfl/bspatch/: BspatchUtil.java
app/src/main/res/layout/: activity_jni_test.xml  activity_main.xml
app/src/main/res/values/: strings.xml
app/src/test/java/com/nfl/bsdiffandbspatch/: ExampleUnitTest.java
